--- a/style.css
+++ b/style.css
@@ -12,18 +12,18 @@ animation: AnimationName 20s ease infinite;
 }
 
 .st1{
-  height: 100px;
+  width: 150%;
   animation-name: moon;
   animation-iteration-count: infinite;
-  animation-duration: 20s;
+  animation-duration: 25s;
 }
 
 @keyframes moon {
-  10%{transform: translateX(-900px); fill:#EAF2F8  }
-  25%{transform: translateY(-800px);fill:#2980B9}
-  50%{ transform: translateX(900px);fill:#A9CCE3}
-  75%{transform: translateY(900px);ill:#D4E6F1}
-  100%{transform: translateX(-900px);fill:#EAF2F8  }
+  0%{transform: translate(-900px ,500px); fill:#EAF2F8  }
+  30%{transform: translateY(-800px);fill:#2980B9}
+  60%{ transform: translate(800px,500px);fill:#A9CCE3}
+  85%{transform: translateY(1000px,);ill:#D4E6F1}
+  100%{transform: translate(-900px ,500px);fill:#EAF2F8  }
 }
 
 
