--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ animation: AnimationName 30s ease infinite;
 .demo-dot {
   -webkit-animation: xAxis 10s infinite cubic-bezier(0.3, 0.27, 0.07, 1.64);
   animation: xAxis 10s infinite cubic-bezier(0.3, 0.27, 0.07, 1.64);
-  margin:50px;
+  margin:100px;
   margin-left: 0;
   fill:yellow;
 }
@@ -79,11 +79,11 @@ animation: AnimationName 30s ease infinite;
 }
 
 @keyframes moon {
-  0%{transform: translate(-900px ,500px); fill:#EAF2F8;  }
-  30%{transform: translateY(-500px)scale(1.3, 1.3);;fill:#2980B9;transform:  }
+  /*0%{transform: translate(-900px ,500px); fill:#EAF2F8;  }
+  30%{transform: translateY(-500px)scale(1.3, 1.3);;fill:#2980B9;transform:  }*/
   60%{ transform: translate(900px,500px);fill:#A9CCE3;}
   85%{transform: translateY(1000px,);ill:#D4E6F1}
-  100%{transform: translate(-900px ,500px);fill:#EAF2F8  }
+  /*100%{transform: translate(-900px ,500px);fill:#EAF2F8  }*/
 }
 
 
