--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@ animation: AnimationName 30s ease infinite;
   50% {
     -webkit-animation-timing-function: cubic-bezier(0.3, 0.27, 0.07, 1.64);
     animation-timing-function: cubic-bezier(0.3, 0.27, 0.07, 1.64);
-    -webkit-transform: translateX(-900px);
-    transform: translateX(-900px);
+    -webkit-transform: translateX(-600px);
+    transform: translateX(-600px);
   }
 }
 
@@ -66,23 +66,23 @@ animation: AnimationName 30s ease infinite;
   50% {
     -webkit-animation-timing-function: cubic-bezier(0.3, 0.27, 0.07, 1.64);
     animation-timing-function: cubic-bezier(0.3, 0.27, 0.07, 1.64);
-    -webkit-transform: translateX(900px);
-    transform: translateX(900px);
+    -webkit-transform: translateX(600px);
+    transform: translateX(600px);
   }
 }
 
 
 .st1{
   width: 80%;
-  animation:moon 20s linear infinite;
+  animation:moon 10s linear infinite;
   border: 3px solid blue;
 }
 
 @keyframes moon {
   /*0%{transform: translate(-900px ,500px); fill:#EAF2F8;  }
-  30%{transform: translateY(-500px)scale(1.3, 1.3);;fill:#2980B9;transform:  }*/
-  60%{ transform: translate(900px,500px);fill:#A9CCE3;}
-  85%{transform: translateY(1000px,);ill:#D4E6F1}
+  30%{transform: scale(1.3, 1.3);}*/
+  60%{ transform: translate(900px,500px);fill:#D3D3D3;}
+  85%{transform: translateY(1000px,);fill:#D4E6F1}
   /*100%{transform: translate(-900px ,500px);fill:#EAF2F8  }*/
 }
 
