--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 *{
   /*background: linear-gradient(270deg, #373142, #3d557a, #54638d,#3f4d77);*/
-  background-color: black;
-background-size: 600% 600%;
-
-animation: AnimationName 30s ease infinite;
+  background:url(https://colorbond.com/sites/default/files/styles/header_background_image_desktop_2x/public/images/header-bg/cb-colour-nightsky.jpg?itok=jzdPsNd_);
+background-size: 400%;
+overflow: hidden;
+animation: AnimationName 20s ease infinite;
 }
 
 @keyframes AnimationName {
@@ -13,11 +13,12 @@ animation: AnimationName 30s ease infinite;
 }
 
 .demo-dot {
-  -webkit-animation: xAxis 10s infinite cubic-bezier(0.3, 0.27, 0.07, 1.64);
-  animation: xAxis 10s infinite cubic-bezier(0.3, 0.27, 0.07, 1.64);
+  -webkit-animation: xAxis 20s infinite cubic-bezier(0.3, 0.27, 0.07, 1.64);
+  animation: xAxis 20s infinite cubic-bezier(0.3, 0.27, 0.07, 1.64);
   margin:100px;
   margin-left: 0;
   fill:yellow;
+  background-color:transparent;
 }
 
 .demo-dot::after {
@@ -28,8 +29,8 @@ animation: AnimationName 30s ease infinite;
   border-radius: 50px;
   background-color: #D3D3D3;
   float: left;
-  -webkit-animation: yAxis 10s infinite cubic-bezier(0.3, 0.27, 0.07, 1.64);
-  animation: yAxis 10s infinite cubic-bezier(0.3, 0.27, 0.07, 1.64);
+  -webkit-animation: yAxis 20s infinite cubic-bezier(0.3, 0.27, 0.07, 1.64);
+  animation: yAxis 20s infinite cubic-bezier(0.3, 0.27, 0.07, 1.64);
 }
 
 
@@ -74,15 +75,15 @@ animation: AnimationName 30s ease infinite;
 
 .st1{
   width: 80%;
-  animation:moon 10s linear infinite;
+  animation:moon 20s linear infinite;
   border: 3px solid blue;
 }
 
 @keyframes moon {
   /*0%{transform: translate(-900px ,500px); fill:#EAF2F8;  }
   30%{transform: scale(1.3, 1.3);}*/
-  60%{ transform: translate(900px,500px);fill:#D3D3D3;}
-  85%{transform: translateY(1000px,);fill:#D4E6F1}
+  50%{ transform: translate(900px,500px);fill:#D3D3D3;}
+  75%{transform: translateY(1000px,);fill:#D4E6F1}
   /*100%{transform: translate(-900px ,500px);fill:#EAF2F8  }*/
 }
 
